<resources>
    <string name="app_name">Kuuf</string>
    <string name="login_title">Welcome to Kuuf!</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="wallet">Kuuf Wallet</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="toc_agreement">I agree with Kuuf Terms and Conditions</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_button_text"><u>Already have an account? Login here</u></string>
    <string name="register_button_text"><u>Don\'t have an account yet? Register here</u></string>
    <string name="register_title">Create a new account and start your next adventure with Kuuf!</string>
    <string name="trans_history_title">Transaction History</string>
    <string name="delete">Delete</string>
    <string name="home_item">Home</string>
    <string name="store_item">Store</string>
    <string name="profile_item">Profile</string>
    <string name="logout_item">Logout</string>
    <string name="store_title">Welcome to Kuuf Store</string>
    <string name="product_name">Product Name</string>
    <string name="product_player_count">0 – 100</string>
    <string name="product_price">Rp000000</string>
    <string name="buy_button">Buy Product</string>
    <string name="top_up_title">Top Up Kuuf Wallet</string>
    <string name="top_up_1">Rp250.000,-</string>
    <string name="top_up_2">Rp500.000,-</string>
    <string name="top_up_3">Rp1.000.000,-</string>
    <string name="confirm_btn">Confirm</string>
    <string name="welcome_title">Welcome, User!</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="buy_product">Buy Product</string>
    <string name="history_empty">There\'s no transaction!</string>
    <string name="wallet_money">Rp000000000</string>
    <string name="about">About</string>
    <string name="author">by Michael Wijaya (2301858465)</string>
    <string name="font_source">Fonts from Google Font, used under the Open Font License:</string>
    <string name="font_source2">Lato Font by Łukasz Dziedzic</string>
    <string name="font_source1">Montserrat Font by Sol Matas, Juan Pablo del Peral, and Jacques Le Bailly</string>
    <string name="password_allowed_characters">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="wallet_title">Your Kuuf Wallet</string>
    <string name="auto_login_title">Remember Me</string>
</resources>