<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_item"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="24sp"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_title"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_username"/>
    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"/>

    <TextView
        android:id="@+id/tv_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_phone"/>

    <TextView
        android:id="@+id/tv_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_dob"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_wallet"/>

    <RadioGroup
        android:id="@+id/rg_top_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/divider">
        <TextView
            android:id="@+id/tv_top_up_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_up_title"
            android:textColor="@color/dark_mimosa"
            android:fontFamily="@font/lato_bold"
            android:textSize="18sp" />
        <RadioButton
            android:id="@+id/rb_top_up_1"
            android:text="@string/top_up_1"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_top_up_2"
            android:text="@string/top_up_2"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_top_up_3"
            android:text="@string/top_up_3"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="@font/lato_regular"
        android:textSize="18sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/rg_top_up"
        android:autofillHints="password"
        android:digits="@string/password_allowed_characters"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_btn"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--Montserrat Font Family & Lato Font Family by Google Font-->