<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="22sp"
            android:textColor="@color/dark_blue"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/user_name"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_register_title"
            android:autofillHints="newUsername" />

        <EditText
            android:id="@+id/et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_username"
            android:autofillHints="phoneNumber" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_phone_num"
            android:autofillHints="newPassword"
            android:digits="@string/password_allowed_characters"/>

        <EditText
            android:id="@+id/et_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_pass"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_password"
            android:autofillHints="newPassword" />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/dob"
            android:fontFamily="@font/lato_regular"
            android:textSize="16sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_pass"
            android:autofillHints="birthDateFull"
            android:focusable="false"
            android:longClickable="false"/>

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/et_dob">
            <TextView
                android:id="@+id/tv_gender_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="@font/lato_bold"
                android:textSize="16sp" />
            <RadioButton
                android:id="@+id/rb_gender_male"
                android:text="@string/male"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rb_gender_female"
                android:text="@string/female"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/rb_gender_other"
                android:text="@string/other"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>

        <CheckBox
            android:id="@+id/cb_agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/toc_agreement"
            android:fontFamily="@font/lato_regular"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/rg_gender" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="16sp"
            android:paddingHorizontal="40dp"
            android:paddingVertical="4dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/cb_agreement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/login_button_text"
            android:fontFamily="@font/lato_light"
            android:textStyle="bold"
            android:textColor="@color/midnight_blue"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

    <!--Montserrat Font Family & Lato Font Family by Google Font-->