<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/user_name"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="@font/lato_regular"
        android:textSize="16sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:autofillHints="password"
        android:digits="@string/password_allowed_characters"/>

    <CheckBox
        android:id="@+id/cb_auto_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_login_title"
        android:fontFamily="@font/lato_regular"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:paddingHorizontal="40dp"
        android:paddingVertical="4dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/cb_auto_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/register_button_text"
        android:padding="0dp"
        android:fontFamily="@font/lato_light"
        android:textStyle="bold"
        android:textColor="@color/midnight_blue"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--Montserrat Font Family & Lato Font Family by Google Font-->