<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="24sp"
        android:textAlignment="center"
        android:paddingHorizontal="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/tv_font_source_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/font_source"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_author"/>

    <TextView
        android:id="@+id/tv_font_source1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/font_source1"
        android:textSize="18sp"
        android:textColor="@color/ebony"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_font_source_title"/>

    <TextView
        android:id="@+id/tv_font_source2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/font_source2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/ebony"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_font_source1"/>

</androidx.constraintlayout.widget.ConstraintLayout>