<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_product_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="360dp"
            android:layout_height="260dp"
            android:padding="10dp"
            android:src="@drawable/cah"
            android:scaleType="fitCenter"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="24sp"
        android:textColor="@color/ebony"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/cv_product_image"/>
    <TextView
        android:id="@+id/tv_player_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_player_count"
        android:fontFamily="@font/lato_regular"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"/>
    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:fontFamily="@font/lato_bold"
        android:textSize="20sp"
        android:textColor="@color/dark_mimosa"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_player_count"/>

    <Button
        android:id="@+id/btn_buy_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_product"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_product_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

<!--Montserrat Font Family & Lato Font Family by Google Font-->