<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="24sp"
        android:textColor="@color/dark_blue"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_wallet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_title"
        android:fontFamily="@font/lato_black"
        android:textSize="12sp"
        android:textColor="@color/ebony"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_money"
        android:fontFamily="@font/lato_regular"
        android:textSize="20sp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_wallet_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_wallet"/>

    <TextView
        android:id="@+id/tv_trans_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trans_history_title"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="20sp"
        android:textColor="@color/midnight_blue"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_trans_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_trans_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tv_empty_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history_empty"
                android:textAlignment="center"
                android:fontFamily="@font/lato_regular"
                android:textSize="16sp"
                android:textColor="@color/red"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trans_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scrollbars="vertical"
                android:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:fontFamily="@font/montserrat_semibold"
        android:layout_marginTop="50dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/red_orange"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/cv_trans_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--Montserrat Font Family & Lato Font Family by Google Font-->